tests/negative/test-fail-function1.rooc
fun main() -> int {
    print_int(undefined_function());
    //todo: redesign the error report
}